<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_list_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/sort" />

    <item android:id="@+id/menu_list_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/menu_list_checkbox_show_completed"
        android:checkable="true"
        android:title="@string/menu_show_completed"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/menu_list_checkbox_important_first"
        android:checkable="true"
        android:title="@string/menu_important_first"
        app:showAsAction="collapseActionView"/>

</menu>