<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:context=".ui.create.CreateFragment">

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:layout_margin="@dimen/margin_medium"
        android:importantForAutofill="no"
        android:inputType="textAutoCorrect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:id="@+id/check_box_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_description"
        android:layout_alignStart="@id/edit_text_description"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/check_box_important"
        android:layout_below="@id/edit_text_description"
        android:text="@string/text_check_box_important"
        android:layout_alignBaseline="@id/check_box_important"/>

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_box_important"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/button_create"/>

</RelativeLayout>